hphp/test/zend/good/Zend/tests/errmsg_017.php.expectf

Fatal error: Method test::__unset() must take exactly 1 arguments in %s/errmsg_017.php on line 4
